navy-apps ics2020 initialized
navy-apps 0de5de8d21e68ff3f4d732cb17fd100f13461cc9 add riscv64

--- a/navy-apps/apps/oslab0/Makefile
+++ b/navy-apps/apps/oslab0/Makefile
@@ -1,6 +1,6 @@
 REPO_PATH = repo
 ifeq ($(wildcard repo/161220016/main.c),)
-  $(shell git clone --depth=1 git@github.com:NJU-ProjectN/oslab0-collection.git $(REPO_PATH))
+  $(shell git clone --depth=1 https://github.com/NJU-ProjectN/oslab0-collection.git $(REPO_PATH))
 endif
 
 GAMES = $(shell ls ./repo | grep -E "[0-9]{9}")
