--- a/navy-apps/apps/bird/Makefile
+++ b/navy-apps/apps/bird/Makefile
@@ -1,6 +1,6 @@
 REPO_PATH = repo
 ifeq ($(wildcard repo/include/BirdGame.h),)
-  $(shell git clone --depth=1 git@github.com:NJU-ProjectN/sdlbird.git $(REPO_PATH))
+  $(shell git clone --depth=1 https://github.com/NJU-ProjectN/sdlbird.git $(REPO_PATH))
 endif
 
 NAME = bird
