--- a/navy-apps/apps/onscripter/Makefile
+++ b/navy-apps/apps/onscripter/Makefile
@@ -1,6 +1,6 @@
 REPO_PATH = repo
 ifeq ($(wildcard repo/include/ONScripter.h),)
-  $(shell git clone --depth=1 git@github.com:NJU-ProjectN/onscripter-navy.git $(REPO_PATH))
+  $(shell git clone --depth=1 https://github.com/NJU-ProjectN/onscripter-navy.git $(REPO_PATH))
 endif
 
 NAME = onscripter
