--- a/navy-apps/libs/compiler-rt/Makefile
+++ b/navy-apps/libs/compiler-rt/Makefile
@@ -1,6 +1,6 @@
 REPO_PATH = repo
 ifeq ($(wildcard repo/LICENSE.TXT),)
-  $(shell git clone --depth=1 git@github.com:NJU-ProjectN/compiler-rt.git $(REPO_PATH))
+  $(shell git clone --depth=1 https://github.com/NJU-ProjectN/compiler-rt.git $(REPO_PATH))
 endif
 
 NAME = compiler-rt
